// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a ready notification 1`] = `
<div>
  <div
    className="alert alert-success"
  >
    <span>
      marketplace.status.AUTOMATIC_READY
    </span>
    <button
      className="js-restart spacer-left"
      onClick={[Function]}
    >
      marketplace.restart
    </button>
  </div>
</div>
`;

exports[`should display an in progress notif 1`] = `
<div>
  <div
    className="alert alert-info"
  >
    <i
      className="spinner spacer-right text-bottom"
    />
    <span>
      marketplace.status.AUTOMATIC_IN_PROGRESS
    </span>
  </div>
</div>
`;

exports[`should display install errors 1`] = `
<div>
  <div
    className="alert alert-danger alert-cancel"
  >
    Foo error
    <a
      className="button-link text-danger"
      href="#"
      onClick={[Function]}
    >
      <CloseIcon />
    </a>
  </div>
  <div
    className="alert alert-info"
  >
    <i
      className="spinner spacer-right text-bottom"
    />
    <span>
      marketplace.status.AUTOMATIC_IN_PROGRESS
    </span>
  </div>
</div>
`;
